--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,17 +1,7 @@
-
-#wrapper {
-  width: 960px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-top: 5%;
-}
-#articles {
-  display: inline-block;
-  overflow: auto;
-  width: 60%;
-  height: 700px;
-  background-color: #2d683f;
+#articles, #saved {
+  background-color: #63cd6d;
   color: white;
+  font-size: 30px;
 }
 #notes {
   float: right;
