--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,16 @@
 #articles, #saved {
-  background-color: #63cd6d;
+  background-color: darkgreen;
   color: white;
   font-size: 30px;
+}
+a{
+  color: black;
+  font-weight: bold;
+  text-shadow: 1px 1px #63cd6d;
+}
+
+nav.navbar{
+  background-color: darkgreen;
 }
 #notes {
   float: right;
@@ -20,21 +29,63 @@ textarea {
   height: 200px;
   font-size: 18px;
 }
+p {
+  text-shadow: 1px 1px black;
+}
+
 .hero {
   background-image: url(../images/onionsBG.jpg);
+  opacity: .85;
   text-align: center;
-  height: 400px;
+  height: 420px;
 }
 .title {
   font-size: 75px;
   color: black;
   font-family: 'Gravitas One', cursive;
+  text-shadow: 2px 2px whitesmoke;
 }
 .subtitle {
   font-size: 50px;
   color: black;
   font-family: 'Gravitas One', cursive;
+  text-shadow: 2px 2px whitesmoke;
 }
-button {
+.button.is-medium {
   font-family: 'Gravitas One', cursive;
+  border-radius: 35%;
+  background-color: slategrey;
+  color: white;
 }
+.modal {
+  position: fixed;
+  top: 200px;
+  margin-top: 100;
+  background-color: #f5f5f5;
+  font-size: 35px;
+  opacity: 0.9;
+  color: white;
+  margin-left: auto;
+  margin-right: auto;
+  height: 300px;
+  width: 750px;
+}
+button.modal-close.is-large {
+  position: relative;
+  left: 1%;
+  background-color: red;
+}
+
+/* The Close Button
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover, .close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+} */
