--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,13 +8,8 @@ a{
   font-weight: bold;
   text-shadow: 1px 1px #63cd6d;
 }
-
 nav.navbar{
   background-color: darkgreen;
-}
-#notes {
-  float: right;
-  width: 30%;
 }
 textarea, input {
   display: block;
@@ -32,7 +27,6 @@ textarea {
 p {
   text-shadow: 1px 1px black;
 }
-
 .hero {
   background-image: url(../images/onionsBG.jpg);
   opacity: .85;
@@ -57,6 +51,19 @@ p {
   background-color: slategrey;
   color: white;
 }
+#notes-modal {
+  position: fixed;
+  top: 100px;
+  margin-top: 100;
+  background-color: #f5f5f5;
+  font-size: 20px;
+  opacity: 0.95;
+  color: black;
+  margin-left: auto;
+  margin-right: auto;
+  height: 700px;
+  width: 900px;
+}
 .modal {
   position: fixed;
   top: 200px;
@@ -64,10 +71,10 @@ p {
   background-color: #f5f5f5;
   font-size: 35px;
   opacity: 0.9;
-  color: white;
+  color: black;
   margin-left: auto;
   margin-right: auto;
-  height: 300px;
+  height: 420px;
   width: 750px;
 }
 button.modal-close.is-large {
@@ -75,17 +82,3 @@ button.modal-close.is-large {
   left: 1%;
   background-color: red;
 }
-
-/* The Close Button
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover, .close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
-} */
