--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,6 +26,7 @@ textarea {
 }
 p {
   text-shadow: 1px 1px black;
+  font-size: 20px;
 }
 .hero {
   background-image: url(../images/onionsBG.jpg);
