--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,7 +6,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="app.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.css">
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/../css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Gravitas+One" rel="stylesheet">
   </head>
   <body>
@@ -22,8 +22,6 @@
   		  </div>
       </div>
     </nav>
-
-
 
   <section class="hero">
     <div class="hero-body">
@@ -41,7 +39,9 @@
   <div class="columns">
     <div class="column is-narrow"></div>
     <div class="column">
-      <div id="articles"></div>
+      <div id="articles">
+        {{{body}}}
+      </div>
     </div>
     <div class="column is-narrow"></div>
   </div>
@@ -58,7 +58,6 @@
     <button class="modal-close is-large" aria-label="close"></button>
   </div>
 
-  {{{body}}}
 
   </body>
 </html>
