--- a/public/css/style.css
+++ b/public/css/style.css
@@ -58,11 +58,11 @@ p {
   margin-top: 100;
   background-color: #f5f5f5;
   font-size: 20px;
-  opacity: 0.95;
+  opacity: 0.9;
   color: black;
   margin-left: auto;
   margin-right: auto;
-  height: 700px;
+  height: 500px;
   width: 900px;
 }
 .modal {
@@ -72,10 +72,10 @@ p {
   background-color: #f5f5f5;
   font-size: 35px;
   opacity: 0.9;
-  color: black;
+  color: white;
   margin-left: auto;
   margin-right: auto;
-  height: 420px;
+  height: 200px;
   width: 750px;
 }
 button.modal-close.is-large {
